@@ -1,3 +1,7 @@
+2023-01-25  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* GSCache.m: Remove erroneous unlock in exception handler.
+
 2023-01-20 Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* GSLinkedList.h: The produce and consume functins of a link store
